; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/atmel/extr_atmel-pcm-dma.c_atmel_pcm_configure_dma.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/atmel/extr_atmel-pcm-dma.c_atmel_pcm_configure_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.snd_soc_pcm_runtime* }
%struct.snd_soc_pcm_runtime = type { i32 }
%struct.snd_pcm_hw_params = type { i32 }
%struct.dma_slave_config = type { i32, i32, i64, i64 }
%struct.atmel_pcm_dma_params = type { i32, %struct.ssc_device* }
%struct.ssc_device = type { i64 }

@.str = private unnamed_addr constant [51 x i8] c"atmel-pcm: hwparams to dma slave configure failed\0A\00", align 1
@SSC_THR = common dso_local global i64 0, align 8
@SSC_RHR = common dso_local global i64 0, align 8
@atmel_pcm_dma_irq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*, %struct.snd_pcm_hw_params*, %struct.dma_slave_config*)* @atmel_pcm_configure_dma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atmel_pcm_configure_dma(%struct.snd_pcm_substream* %0, %struct.snd_pcm_hw_params* %1, %struct.dma_slave_config* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.snd_pcm_substream*, align 8
  %6 = alloca %struct.snd_pcm_hw_params*, align 8
  %7 = alloca %struct.dma_slave_config*, align 8
  %8 = alloca %struct.snd_soc_pcm_runtime*, align 8
  %9 = alloca %struct.atmel_pcm_dma_params*, align 8
  %10 = alloca %struct.ssc_device*, align 8
  %11 = alloca i32, align 4
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %5, align 8
  store %struct.snd_pcm_hw_params* %1, %struct.snd_pcm_hw_params** %6, align 8
  store %struct.dma_slave_config* %2, %struct.dma_slave_config** %7, align 8
  %12 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %5, align 8
  %13 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %12, i32 0, i32 0
  %14 = load %struct.snd_soc_pcm_runtime*, %struct.snd_soc_pcm_runtime** %13, align 8
  store %struct.snd_soc_pcm_runtime* %14, %struct.snd_soc_pcm_runtime** %8, align 8
  %15 = load %struct.snd_soc_pcm_runtime*, %struct.snd_soc_pcm_runtime** %8, align 8
  %16 = getelementptr inbounds %struct.snd_soc_pcm_runtime, %struct.snd_soc_pcm_runtime* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %5, align 8
  %19 = call %struct.atmel_pcm_dma_params* @snd_soc_dai_get_dma_data(i32 %17, %struct.snd_pcm_substream* %18)
  store %struct.atmel_pcm_dma_params* %19, %struct.atmel_pcm_dma_params** %9, align 8
  %20 = load %struct.atmel_pcm_dma_params*, %struct.atmel_pcm_dma_params** %9, align 8
  %21 = getelementptr inbounds %struct.atmel_pcm_dma_params, %struct.atmel_pcm_dma_params* %20, i32 0, i32 1
  %22 = load %struct.ssc_device*, %struct.ssc_device** %21, align 8
  store %struct.ssc_device* %22, %struct.ssc_device** %10, align 8
  %23 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %5, align 8
  %24 = load %struct.snd_pcm_hw_params*, %struct.snd_pcm_hw_params** %6, align 8
  %25 = load %struct.dma_slave_config*, %struct.dma_slave_config** %7, align 8
  %26 = call i32 @snd_hwparams_to_dma_slave_config(%struct.snd_pcm_substream* %23, %struct.snd_pcm_hw_params* %24, %struct.dma_slave_config* %25)
  store i32 %26, i32* %11, align 4
  %27 = load i32, i32* %11, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %3
  %30 = call i32 @pr_err(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  %31 = load i32, i32* %11, align 4
  store i32 %31, i32* %4, align 4
  br label %54

32:                                               ; preds = %3
  %33 = load %struct.ssc_device*, %struct.ssc_device** %10, align 8
  %34 = getelementptr inbounds %struct.ssc_device, %struct.ssc_device* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* @SSC_THR, align 8
  %37 = add nsw i64 %35, %36
  %38 = load %struct.dma_slave_config*, %struct.dma_slave_config** %7, align 8
  %39 = getelementptr inbounds %struct.dma_slave_config, %struct.dma_slave_config* %38, i32 0, i32 3
  store i64 %37, i64* %39, align 8
  %40 = load %struct.dma_slave_config*, %struct.dma_slave_config** %7, align 8
  %41 = getelementptr inbounds %struct.dma_slave_config, %struct.dma_slave_config* %40, i32 0, i32 0
  store i32 1, i32* %41, align 8
  %42 = load %struct.ssc_device*, %struct.ssc_device** %10, align 8
  %43 = getelementptr inbounds %struct.ssc_device, %struct.ssc_device* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* @SSC_RHR, align 8
  %46 = add nsw i64 %44, %45
  %47 = load %struct.dma_slave_config*, %struct.dma_slave_config** %7, align 8
  %48 = getelementptr inbounds %struct.dma_slave_config, %struct.dma_slave_config* %47, i32 0, i32 2
  store i64 %46, i64* %48, align 8
  %49 = load %struct.dma_slave_config*, %struct.dma_slave_config** %7, align 8
  %50 = getelementptr inbounds %struct.dma_slave_config, %struct.dma_slave_config* %49, i32 0, i32 1
  store i32 1, i32* %50, align 4
  %51 = load i32, i32* @atmel_pcm_dma_irq, align 4
  %52 = load %struct.atmel_pcm_dma_params*, %struct.atmel_pcm_dma_params** %9, align 8
  %53 = getelementptr inbounds %struct.atmel_pcm_dma_params, %struct.atmel_pcm_dma_params* %52, i32 0, i32 0
  store i32 %51, i32* %53, align 8
  store i32 0, i32* %4, align 4
  br label %54

54:                                               ; preds = %32, %29
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local %struct.atmel_pcm_dma_params* @snd_soc_dai_get_dma_data(i32, %struct.snd_pcm_substream*) #1

declare dso_local i32 @snd_hwparams_to_dma_slave_config(%struct.snd_pcm_substream*, %struct.snd_pcm_hw_params*, %struct.dma_slave_config*) #1

declare dso_local i32 @pr_err(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
